# generate_article_figure

./: .env.example  .gitignore  ATTRIBUTIONS.md  CLAUDE.md  LICENSE  README.ko.md  README.md  pyproject.toml
analyze/: 260509_path_c_complex_figure_probe.py  260512_bioicons_pilot_cellcycle.py  260512_bioicons_round10_dogfood.py  260512_bioicons_round10b_mapk_after_fix.py  260512_bioicons_round11_dogfood2.py  260512_bioicons_round12_anaphase_layout.py  260512_bioicons_round13_insulin_v3.py  260512_bioicons_round14_cancer_after_oncology.py  260512_bioicons_round2_live.py  260512_bioicons_round3_per_stage.py  260512_bioicons_round4_meiosis.py  260512_bioicons_round5_signaling_ecm.py  260512_bioicons_round6_integrin.py  260512_bioicons_round7_signaling_ecm.py  260512_bioicons_round8_adhesion_remodelling.py  260512_bioicons_round9_endo_apop.py  260513_bioicons_round15_development_dogfood.py  260513_bioicons_round16_release_dogfood.py  260513_bioicons_round17_verify_descriptions.py  260513_bioicons_round18_autophagy.py  260513_bioicons_round19_antigen_presentation.py  260513_bioicons_round20_cross_domain_dogfood.py  260601_path_d_icon_consistency_probe.py  260601_path_d_icon_postprocess_size.py  260601_path_d_live_e2e.py
app/: config.py  logging.py  main.py
scripts/: sanitize_bioicons.py
tests/: conftest.py  test_arrow_clip.py  test_bio_symbols.py  test_edit_route.py  test_export.py  test_export_route.py  test_gemini_client.py  test_generate_route.py  test_gradio_smoke.py  test_health.py  test_icon_postprocess.py  test_inpaint.py  test_inpaint_live.py  test_molecule.py  (+11 more)
(+48 files in other folders)
